environments/demo/edge-config/non-active/http-delegation/httpbin-vs-method.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /foo
      options:
        prefixRewrite: '/'
      delegateAction:
          ref:
            name: httpbin-rt
            namespace: gloo-system
